# bsuir-diploma-2026

./: CMakeLists.txt  LICENSE.md  client_action.h  client_state.h  codec.c  codec.h  device.c  device.h  main.c  net.c  net.h  picture_widget.c  picture_widget.h  protocol.h  s_conn_map.c  s_conn_map.h  server.c  style.c  user_list.c  user_list.h
server/: CMakeLists.txt  s_conn_map.c  s_conn_map.h  server.c  session_call.c  session_call.h
shared/: net.c  net.h  protocol.h
widgets/: nuklear.c  nuklear.h
